tests/ui/parser/removed-syntax/removed-syntax-field-semicolon.stderr
error: struct fields are separated by `,`
  --> $DIR/removed-syntax-field-semicolon.rs:2:12
   |
LL | struct S {
   |        - while parsing this struct
LL |     bar: ();
   |            ^ help: replace `;` with `,`

error: aborting due to 1 previous error

